--- a/Advent of Code 2015/Advent of Code 2015.csproj
+++ b/Advent of Code 2015/Advent of Code 2015.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="Inputs\**\*.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
