Moved csharp code to own directory

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # Advent of Code personal inputs (do not commit)
-Advent of Code 2015/Inputs/
+csharp/Advent of Code 2015/Inputs/
 *_input.txt
 
 # User-specific files
