Asked copilot to migrate my project to Rust

--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,20 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Rust build artifacts
+target/
+Cargo.lock
+**/*.rs.bk
+*.pdb
+
+# Rust IDE
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+.vscode/settings.json
+
+# Inputs
+rust/inputs
